--- a/product_buyer.html
+++ b/product_buyer.html
@@ -43,7 +43,7 @@
             <li class="shopping_cart_link">
               <a href="#">
                 <img
-                  src="./image/navigation_icon_shopping_cart._empty.svg"
+                  src="./image/navigation_icon_shopping_cart_empty.svg"
                   class="shopping_cart_image"
                   alt="장바구니"
                 />
