호두마켓 푸터 html 완성 > 상품 목록 페이지, 장바구니 페이지

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -64,6 +64,48 @@
         </nav>
       </div>
     </header>
+    <footer id="bottom_info_bar">
+      <div class="bottom_info_center">
+        <div class="policy_and_social_box">
+
+          <ul class="policy_info">
+            <li>호두샵 소개</li>
+            <li>이용약관</li>
+            <li class="bold_font">개인정보처리방침</li>
+            <li>전자금융거래약관</li>
+            <li>청소년보호정책</li>
+            <li>제휴문의</li>
+          </ul>
+
+          <ul class="social_info">
+            <li>
+              <a href="https://www.instagram.com/weniv_official/">
+                <img src="./image/social_icon_instagram.svg" alt="호두마켓 인스타그램으로 이동">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/Jejucoding">
+                <img src="./image/social_icon_facebook.svg" alt="호두마켓 페이스북으로 이동">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/channel/UC4GnvNKtuJ4cqWsYjxNxAEQ">
+                <img src="./image/social_icon_youtube.svg" alt="호두마켓 유튜브 채널로 이동">
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="bottom_line"></div>
+
+        <address class="company_info">
+          <p class="bold_font">(주)HODU SHOP</p>
+          <p>제주특별자치도 제주시 동광고 137 제주코딩베이스캠프</p>
+          <p>사업자 번호 : 000-0000-0000 | 통신판매업</p>
+          <p>대표 : 김호두</p>
+        </address>
+      </div>
+    </footer>
     <script src="./js/shopping_cart.js"></script>
   </body>
 </html>
