상품 목록 페이지 : 메인 배너 html 완성 swiper 버튼, dot 버튼을 포함한 배너

--- a/product_buyer.html
+++ b/product_buyer.html
@@ -64,6 +64,44 @@
         </nav>
       </div>
     </header>
+
+
+
+    <main id="main_container">
+      <section class="event_banner">
+        <button type="button" class="banner_previous_button">
+          <img src="./image/banner_icon_swiper_arrow_left.svg" alt="이전 이벤트 배너 이미지 보기 버튼" />
+        </button>
+
+        <figure class="banner_center">
+          <img src="./image/banner_background.png" class="banner_image" alt="오픈마켓 메인 이벤트 배너" />
+          <ul class="banner_dot_item">
+            <li>
+              <button type="button" class="dot_button_one"></button>
+            </li>
+            <li>
+              <button type="button" class="dot_button_two"></button>
+            </li>
+            <li>
+              <button type="button" class="dot_button_three"></button>
+            </li>
+            <li>
+              <button type="button" class="dot_button_four"></button>
+            </li>
+            <li>
+              <button type="button" class="dot_button_five"></button>
+            </li>
+          </ul>
+        </figure>
+
+        <button type="button" class="banner_next_button">
+          <img src="./image/banner_icon_swiper_arrow_right.svg" alt="다음 이벤트 배너 이미지 보기 버튼" />
+        </button>
+      </section>
+    </main>
+
+
+
     <footer id="bottom_info_bar">
       <div class="bottom_info_center">
         <div class="policy_and_social_box">
