헤더 장바구니 클릭 시 장바구니 페이지로 이동

--- a/product_buyer.html
+++ b/product_buyer.html
@@ -41,7 +41,7 @@
         <nav id="top_navigation_container">
           <ul class="top_navigation_list">
             <li class="shopping_cart_link">
-              <a href="#">
+              <a href="./shopping_cart.html">
                 <img
                   src="./image/navigation_icon_shopping_cart_empty.svg"
                   class="shopping_cart_image"
