장바구니 페이지 : 마이페이지 링크 hover 시 초록색으로 변하는 효과 추가

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -40,30 +40,24 @@
   
         <nav id="top_navigation_container">
           <ul class="top_navigation_list">
-            <li class="shopping_cart_link">
-              <a href="#">
-                <img
-                  src="./image/navigation_icon_shopping_cart_filled.svg"
-                  class="shopping_cart_image"
-                  alt="장바구니"
-                />
-                <p class="shopping_cart_title">장바구니</p>
+            <li>
+              <a href="./shopping_cart.html" class="top_navigation_link cart_image">
+                <p class="cart_title">장바구니</p>
               </a>
             </li>
-            <li class="my_page_link">
-              <a href="#">
-                <img
-                  src="./image/navigation_icon_user_empty.svg"
-                  class="my_page_image"
-                  alt="마이페이지"
-                />
-                <p class="my_page_title">마이페이지</p>
+
+            <li>
+              <a href="" class="top_navigation_link mypage_image">
+                <p class="top_navigation_title">마이페이지</p>
               </a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
+
+
+
     <footer id="bottom_info_bar">
       <div class="bottom_info_center">
         <div class="policy_and_social_box">
