장바구니 페이지 : 메인 장바구니 표 머리 html 완성 input radio 버튼, 상품정보와 수량, 상품금액을 볼 수 있는 장바구니 표

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -58,6 +58,31 @@
 
 
 
+    <main>
+      <section>
+        <table>
+          <caption class="product_table_caption">장바구니</caption>
+  
+          <thead>
+            <tr class="product_table_row">
+              <th class="product_title_radio">
+                <label for="product_radio_input">
+                  <input id="product_radio_input" type="radio" />
+                </label>
+              </th>
+  
+              <th class="product_title_info">상품정보</th> 
+              <th class="product_title_quantity">수량</th>
+              <th class="product_title_price">상품금액</th>
+            </tr>
+          </thead>
+  
+        </table>
+      </section>
+    </main>
+
+
+
     <footer id="bottom_info_bar">
       <div class="bottom_info_center">
         <div class="policy_and_social_box">
