호두마켓 로고 링크 주소 없애기

--- a/product_buyer.html
+++ b/product_buyer.html
@@ -13,13 +13,9 @@
     <header id="top_navigation_bar">
       <div class="top_navigation_bar_center">
         <div class="logo_container">
-          <a href="#">
+          <a href="">
             <h1 class="screen_reader_only">호두마켓</h1>
-            <img
-              src="./image/LOGO_HODU.png"
-              class="logo_image"
-              alt="호두마켓 초록색 로고"
-            />
+            <img src="./image/LOGO_HODU.png" class="logo_image" alt="호두마켓 로고" />
           </a>
           
           <form action="" name="search" method="get" class="top_search">
