--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -13,13 +13,9 @@
     <header id="top_navigation_bar">
       <div class="top_navigation_bar_center">
         <div class="logo_container">
-          <a href="#">
+          <a href="">
             <h1 class="screen_reader_only">호두마켓</h1>
-            <img
-              src="./image/LOGO_HODU.png"
-              class="logo_image"
-              alt="호두마켓 초록색 로고"
-            />
+            <img src="./image/LOGO_HODU.png" class="logo_image" alt="호두마켓 로고" />
           </a>
           
           <form action="" name="search" method="get" class="top_search">
@@ -62,7 +58,7 @@
       <section>
         <table>
           <caption class="product_table_caption">장바구니</caption>
-  
+
           <thead>
             <tr class="product_table_row">
               <th class="product_title_radio">
@@ -70,13 +66,12 @@
                   <input id="product_radio_input" type="radio" />
                 </label>
               </th>
-  
+
               <th class="product_title_info">상품정보</th> 
               <th class="product_title_quantity">수량</th>
               <th class="product_title_price">상품금액</th>
             </tr>
           </thead>
-  
         </table>
       </section>
     </main>
