--- a/login_buyer.html
+++ b/login_buyer.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="./css/login_buyer.css">
     <title>로그인 | 구매회원 | 호두마켓</title>
   </head>
-  <body>
+  <body>    
+    <header>
+      <a href="">
+        <h1 class="screen_reader_only">호두마켓</h1>
+        <img src="./image/LOGO_HODU.png" class="logo_image" alt="호두마켓 로고" />
+      </a>
+    </header>
     <script src="./js/login_buyer.js"></script>
   </body>
 </html>
