--- a/product_buyer.html
+++ b/product_buyer.html
@@ -86,6 +86,10 @@
           <img src="./image/banner_icon_swiper_arrow_right.svg" alt="다음 이벤트 배너 이미지 보기 버튼" />
         </button>
       </section>
+
+
+      <!-- 상품 목록 불러오기(GET) | https://openmarket.weniv.co.kr/products/ -->
+      <section class="product_list"></section>
     </main>
 
 
