장바구니 페이지 : 장바구니 목록 불러오기 준비

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -72,6 +72,9 @@
               <th class="product_title_price">상품금액</th>
             </tr>
           </thead>
+
+          <!-- 장바구니 목록 보기(GET) : https://openmarket.weniv.co.kr/cart/ -->
+          <tbody class="cart_list"></tbody>
         </table>
       </section>
     </main>
