상품 목록 페이지 메인 컨테이너 id를 class로 수정

--- a/product_buyer.html
+++ b/product_buyer.html
@@ -55,7 +55,7 @@
 
 
 
-    <main id="main_container">
+    <main class="main_container">
       <section class="event_banner">
         <button type="button" class="banner_previous_button">
           <img src="./image/banner_icon_swiper_arrow_left.svg" alt="이전 이벤트 배너 이미지 보기 버튼" />
