로그인 페이지 : 로고 헤더 완성

--- a/login_buyer.html
+++ b/login_buyer.html
@@ -10,12 +10,15 @@
     <title>로그인 | 구매회원 | 호두마켓</title>
   </head>
   <body>    
-    <header>
+    <header id="logo_center">
       <a href="">
         <h1 class="screen_reader_only">호두마켓</h1>
         <img src="./image/LOGO_HODU.png" class="logo_image" alt="호두마켓 로고" />
       </a>
     </header>
+
+
+
     <script src="./js/login_buyer.js"></script>
   </body>
 </html>
