로그인 페이지 : 로그인 폼 html 완성

--- a/login_buyer.html
+++ b/login_buyer.html
@@ -19,6 +19,26 @@
 
 
 
+    <main>
+      <section class="login_container">
+        <div class="login_tabs">
+          <button class="login_tab_button active">구매회원 로그인</button>
+          <button class="login_tab_button">판매회원 로그인</button>
+        </div>
+
+        <div class="login_form">
+          <input type="text" class="login_input" placeholder="아이디" />
+          <input type="password" class="login_input" placeholder="비밀번호" />
+          <p class="same_error_message">에러메시지</p>
+          <button type="submit" class="login_button">로그인</button>
+        </div>
+
+        <div class="login_options">
+          <a href="./join.html" class="option_text">회원가입</a>
+          <a href="" class="option_text">비밀번호 찾기</a>
+        </div>
+      </section>
+    </main>
     <script src="./js/login_buyer.js"></script>
   </body>
 </html>
