--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/login_buyer.css">
+    <link rel="stylesheet" href="./css/login.css">
     <title>로그인 | 구매회원 | 호두마켓</title>
   </head>
   <body>    
@@ -39,6 +39,6 @@
         </div>
       </section>
     </main>
-    <script src="./js/login_buyer.js"></script>
+    <script src="./js/login.js"></script>
   </body>
 </html>
