상품 목록 페이지 완성 > html : 상품 목록 섹션 클래스명 수정, > css : display grid와 flex 속성으로 스타일 정렬, > javascript: innerHTML로 html 요소 생성

--- a/product_buyer.html
+++ b/product_buyer.html
@@ -89,7 +89,7 @@
 
 
       <!-- 상품 목록 불러오기(GET) | https://openmarket.weniv.co.kr/products/ -->
-      <section class="product_list"></section>
+      <section class="product_container"></section>
     </main>
 
 
