상품 목록 페이지 : 배너 버튼 hover 시 검은색으로 변하는 효과 추가

--- a/product_buyer.html
+++ b/product_buyer.html
@@ -65,19 +65,19 @@
           <img src="./image/banner_background.png" class="banner_image" alt="오픈마켓 메인 이벤트 배너" />
           <ul class="banner_dot_item">
             <li>
-              <button type="button" class="dot_button_one"></button>
+              <button type="button" class="dot_button_one dot_hover"></button>
             </li>
             <li>
-              <button type="button" class="dot_button_two"></button>
+              <button type="button" class="dot_button_two dot_hover"></button>
             </li>
             <li>
-              <button type="button" class="dot_button_three"></button>
+              <button type="button" class="dot_button_three dot_hover"></button>
             </li>
             <li>
-              <button type="button" class="dot_button_four"></button>
+              <button type="button" class="dot_button_four dot_hover"></button>
             </li>
             <li>
-              <button type="button" class="dot_button_five"></button>
+              <button type="button" class="dot_button_five dot_hover"></button>
             </li>
           </ul>
         </figure>
