--- a/error404.html
+++ b/error404.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/error_404.css">
+    <link rel="stylesheet" href="./css/error404.css">
     <title>404 | 해당 페이지를 찾을 수 없음 | 호두마켓</title>
   </head>
   <body>
-    <script src="./js/error_404.js"></script>
+    <script src="./js/error404.js"></script>
   </body>
 </html>
