--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/login.css">
-    <title>로그인 | 구매회원 | 호두마켓</title>
+    <title>로그인 | 호두마켓</title>
   </head>
   <body>    
     <header id="logo_center">
