에러 페이지 : 페이지 타이틀 수정 > 페이지를 찾을 수 없습니다. 로 페이지 타이틀 수정 > 사용자가 404 에러임을 확인할 수 있도록 404 Not Found 문구 추가

--- a/error404.html
+++ b/error404.html
@@ -7,9 +7,10 @@
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/error404.css">
-    <title>404 | 해당 페이지를 찾을 수 없음 | 호두마켓</title>
+    <title>페이지를 찾을 수 없습니다.</title>
   </head>
   <body>
+    <h1>404 Not Found</h1>
     <script src="./js/error404.js"></script>
   </body>
 </html>
